Fix aligning

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ label
 {
 	/*width: 49%;*/
 	display: inline-block;
+	vertical-align: top;
 }
 .photo
 {
